# Vioft-Router-API

./: .gitignore  CMakeLists.txt  README.md
List_All_Clients/: List_Clients_API.lua  Output_connected_devices.lua
List_All_Clients/C-Implementation/: CMakeLists.txt  demo.c  demo.h  glapibase.h  main.c  unittest.c
List_All_Clients/Lua-Implementation/: Output_connected_devices.lua  Print_Wifi_Clients.sh  Radio_Clients.lua  Sample_Bash_Script_Test.sh  dkjson.lua
src/: CMakeLists.txt  CMakeLists2.txt  Makefile  Sample_Bash_Script_Test.sh  Sample_IP_Bash_Script.sh  api.c  api.h  demo.c  demo.h  glapibase.h  interface.c  interface.h  unittest.c
