cmake_minimum_required(VERSION 3.13)
project(Vioft-API)
set(CMAKE_C_STANDARD 99)
include_directories(.)
include_directories(src)
include_directories(/usr/local/include)
include_directories(/usr/include)
set(SOURCE_FILES src/api.c src/api.h src/interface.h src/unittest.c src/interface.c)
add_executable(Vioft-API ${SOURCE_FILES})